# makeahmap

./: .gitignore  Changelog.txt  KNOWN-ISSUES.txt  Makefile  README.txt  bmp.h  build.bat  cleanup_script.bat  config.ini  copyright-makeahmap.txt  dem.h  download_sources.txt  downloader.cpp  downloader.h  fileio.h  groundmapping.csv  gshhs.h  make-release.bat  makeahmap.cpp  time.txt  todo.txt  update_script.bat
erode/: 0.pgm  1.pgm  5.data  5.pgm  6.pgm  bld.sh  caffe.cpp  caffe_predict.h  erode.cpp  mxnet_predict.h  prg.cl  tensorrt_predict.h  test.cpp  test.pgm
images/: acknowledgements.txt  grid_1024x1024px_128miles.tif  grid_1024x1024px_256miles.tif  grid_1024x1024px_512miles.tif  grid_1024x1024px_64miles.tif  grid_2048x2048px_512miles.tif
resources/groundmapping/: mediterranean.csv  pacific.csv
sources/: CMakeLists.txt  Makefile  bmp.h  build.bat  clcpp.h  dem.h  dimage.h  downloader.cpp  downloader.h  fileio.h  filter.h  font.h  getversion.h  glyphs.h  gpu_solver.cpp  gpumemtest.cpp  gshhs.h  image.h  makeahmap.cpp  makeahmap.rc  makefont.sh  membrane.cpp  memspeed.cpp  solver.h  solver_ocl.h  surface.cpp  surface.h  surface_solver.h  text_to_image.cpp  text_to_image.h  update_makeahmap.cpp  url.cpp  url.h  util.h
tergen/: dep.prototxt  gen_from_db.py  gen_from_img.py  make_lmdb.py  make_mnist_net.py  make_net.py  mnist_lmdb.py  paths.py  shared_train.py  solver.prototxt  solver_dsc.prototxt  solver_dsc_adadelta.prototxt  solver_dsc_adam.prototxt  solver_gen.prototxt  solver_gen_adadelta.prototxt  solver_gen_adam.prototxt  solver_pretrain.prototxt  train_test.prototxt
